# pymeshview

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
.github/workflows/: build-cpp-linux.yml  build-linux.yml  build-python-linux.yml  build-python-macos.yml  build-python-manylinux.yml  build-python-windows.yml  build-wheel.yml  ccpp.yml  main.yml
examples/: CMakeLists.txt
examples/mesh_viewer/: CMakeLists.txt
examples/python/: show_mesh.py
examples/viewer/: CMakeLists.txt  main.cpp
pybind/: CMakeLists.txt  TetMeshBuffer.cpp  Window.cpp  main.cpp
pybind/examples/: viewmesh.py
pymeshview/: utils.py
src/: CMakeLists.txt  Camera.cpp  MeshLoader.cpp  ShaderProgram.cpp  TetMeshBuffer.cpp  Window.cpp
src/include/meshview/: Camera.h  Common.h  MeshLoader.h  ShaderProgram.h  TetMeshBuffer.h  Window.h
src/shaders/: lighting.fs  lighting.vs
tests/: CMakeLists.txt  TetMeshBuffer.cpp  Window.cpp  main.cpp
